fe/style.css
/*
	Custom font used for names and other `technical` texts.
*/
@font-face {
    font-family: 'FiraMono';
    src: url('font/FiraMono-Regular.ttf');
}

@font-face {
    font-family: 'FiraMonoBold';
    src: url('font/FiraMono-Bold.ttf');
}


@font-face {
    font-family: 'symbols';
    src: url('font/Symbols.ttf');
}

@font-face {
    font-family: 'BaileyReg';
    src: url("font/B3.ttf");
}

@font-face {
    font-family: 'BaileyBold';
    src: url("font/B2.ttf");
}

body {
    font-family: 'Helvetica', 'Arial', sans-serif;
}

#loading-indicator {
    text-align: center;
    background: #fff;
    border-radius: 24px;
    box-shadow: 0px 2px 5px #d0d0d0;
    position: fixed;
    bottom: 24px;
    right: 24px;
    padding: 24px;
    pointer-events: none;
    transition: 0.3s; 
}

.freeze {
    pointer-events: none
}

#logo {
    width: fit-content;
    width: -moz-fit-content;
    position: fixed;
    margin: 0;
    top: 24px;
    right: 24px;
    font-family: 'BaileyReg', monospace;
    font-weight: normal;
    color: #3a568c;
    font-size: 2.2em;
}

#title{
    font-family: 'BaileyBold', monospace;
    font-weight: bold;
    color: #d05d5d;
}

#version {
    display: inline-block;
    position: fixed;
    bottom: 16px;
    left: 16px;
}


/*
	The root of the model editor and attractor visualization 
    - just stretch across the whole page...
*/
#cytoscape-editor, #visjs-container {
	position: absolute;
    left: 0;
    right: 0;
    bottom: 0;    
    top: 0;
    background: #f9f9f9;
    z-index: -1;
}

/*
    The menu that is displayed when user clicks on a node.
*/
.float-menu {
	position: absolute;
    /* Initially, menu is off screen */
	left: -200px;
	top: -200px;
    /* This is to accommodate longer hints */
    width: 190px;
    /* Ensure hint is in the middle */
    text-align: center;
	/* Ensures the zoom is properly applied when needed */
	transform-origin: 0% 0%;
    /* We don't animate other stuff because that needs to be in sync with the graph */
    transition: opacity 0.3s;
}

.float-menu .button {
    width: 24px;
    height: 24px;
    padding: 12px;
    border-radius: 24px;    
    transition: 0.3s;
}

.float-menu .button:hover {
    background-color: #CFD8DC;
}

.float-menu .button-row {
    height: 48px;
    width: 153px;
    margin: 0 auto;
    border-radius: 24px;
    background-color: #ECEFF1;
}

.float-menu .hint {
    font-weight: bold;
    transition: opacity 0.3s;
    pointer-events: none;
    text-shadow: 0px 2px 5px #d0d0d0;
}

/*
    The menu with main buttons/panels
*/
#side-menu {
    position: absolute;
    top: 0;
}

#side-menu .button, #side-menu .button-fake {
    width: 48px;
    height: 48px;
    padding: 12px;
    border-radius: 24px;
    background-color: #ECEFF1;
    display: inline-block;
    transition: background-color 0.3s;
}

#side-menu .button.selected, #side-menu .button-fake.selected {
    background-color: #CFD8DC;
}

#side-menu .button:hover, #side-menu .button-fake:hover {
    background-color: #B0BEC5;
}

#side-menu .button-group, #side-menu .button-group-fake {
    background-color: #ECEFF1;
    display: block;
    border-radius: 24px;
    box-shadow: 0px 2px 5px #d0d0d0;
    height: 72px;
    width: 72px;
    transition: width 0.3s;
    position: relative;
    margin-bottom: 12px;
}

#side-menu .button-group .hint, #side-menu .button-group-fake .hint {
    width: 200px;
    line-height: 72px;
    display: table-cell;
    position: absolute;
    top: 0px;
    left: 72px;
    font-weight: bold;    
    font-size: 20px;    
    text-align: center;      
    pointer-events: none;
}

#quick-help {
    position: fixed; 
    top: 50%; 
    left: 50%; 
    transform: translate(-50%, -50%);
    padding: 24px;
    border-radius: 12px;
    color: #ffffff;
    background: #646464;
    font-size: 18px;
    font-family: 'FiraMono';
    opacity: 0.5;
    transition: 0.3s;
    pointer-events: none;
}

.main-panel {
    display: block;
    background-color: #f5f5f5;
    box-shadow: 0px 2px 5px #d0d0d0;
    width: 500px;
    margin-left: 82px;
    padding: 12px;
    border-radius: 8px;
    position: relative;
    overflow-y: auto;
    max-height: 95vh;
}

.new-window-panel {
    display: block;
    width: 500px;
    padding: 12px;
    position: relative;
    overflow-y: auto;
    max-height: 95vh;
}

#tree-explorer .main-panel {
    margin: 0 auto; 
    float: left;
}

.panel-close-button {
    width: 24px;
    height: 24px;
    padding: 4px;
    border-radius: 8px;    
    transition: 0.3s;
    position: absolute;
    left: 4px;
    top: 4px;
    transition: background-color 0.3s;
}

.panel-close-button:hover {
    background: #CFD8DC;
}

.invisible-input {
    position: relative;
    display: inline-block;
}

.invisible-input input {
    font-family: 'FiraMono', monospace;
    background: none;
    border: none;
    font-size: 14px;   
}

.invisible-input textarea {
    font-family: 'FiraMono', monospace;
    background: none;
    border: none;
    font-size: 14px;
    resize: none;
    height: 1.25em;
}

.invisible-input .error, .invisible-input.error {
    background-color: rgba(200, 40, 40, 0.4); 
}

div.invisible-input[contenteditable] {    
    max-height: 200px;    
    padding-top: 4px;
    padding-bottom: 4px;
    overflow: auto;
    word-break: break-all;    
    font-family: 'FiraMono';
    transition: 0.3s;
}

div.invisible-input[contenteditable]:focus {    
    outline: none;
    background-color: #ECEFF1;
    border-radius: 4px;
}

/* Magic that enables placeholder inside content editable. */
/* Sadly, you still have to apply `ensurePlaceholder` to it. */
div.invisible-input[contenteditable]:empty:not(:focus):before {
  content:attr(data-placeholder);
  color:grey;
  font-style:italic;
}

.invisible-input input:focus {
    outline: none;
    font-weight: bold;
    font-family: 'FiraMonoBold', monospace;
}

.invisible-input textarea:focus {
    outline: none;
    font-weight: bold;
    font-family: 'FiraMonoBold', monospace;
}
/* ... */

